--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,69 @@ jobs:
           echo "REDIS_PORT=6379" >> .env
           echo "REDIS_DB=0" >> .env
 
-      - name: Run tests
+      - name: Démarrer le conteneur
+        run: docker compose up -d
+
+      - name: Attendre MySQL
+        run: |
+          sleep 10
+          timeout=60
+          until docker compose exec mysql mysqladmin ping -h localhost -u root -proot --silent; do
+            echo "Waiting for MySQL..."
+            sleep 3
+            timeout=$((timeout - 3))
+            if [ $timeout -le 0 ]; then
+              echo "MySQL failed to start"
+              exit 1
+            fi
+          done
+          sleep 5
+
+      - name: Exécuter test_user.py (TODO - inclure tous les tests)
         working-directory: src
-        run: echo "Call pytest command here!"
+        run: |
+          python3 -m pytest
+
+
+      - name: Déploiement
+        working-directory: src
+        run: echo "TODO - Faire le déploiement"
+
+      - name: Cleanup
+        if: always()
+        run: docker compose down -v
+
+
+  deploy:
+    runs-on: self-hosted
+    needs: test   # Ne se lance que si les tests passen
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Debug workspace
+        run: |
+          echo "GITHUB_WORKSPACE=$GITHUB_WORKSPACE"
+          pwd
+          ls -la
+
+      - name: Creer .env pour le déploiement
+        working-directory: ${{ github.workspace }}
+        run: |
+          echo "DB_HOST=mysql" > .env
+          echo "DB_PORT=3306" >> .env
+          echo "DB_NAME=labo02_db" >> .env
+          echo "DB_USER=labo02" >> .env
+          echo "DB_PASS=labo02" >> .env
+          echo "REDIS_HOST=redis" >> .env
+          echo "REDIS_PORT=6379" >> .env
+          echo "REDIS_DB=0" >> .env
+          ls -la .env
+
+      - name: Déploiement local
+        run: |
+          cd $GITHUB_WORKSPACE
+          echo "Déploiement sur la VM en cours..."
+
+          docker compose down || true
+          docker compose up -d --build    
+          docker compose ps
